--- a/WebApplicationAGBlazor_01/WebApplicationAGBlazor_01.csproj
+++ b/WebApplicationAGBlazor_01/WebApplicationAGBlazor_01.csproj
@@ -1,10 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="MySql.Data" Version="8.2.0" />
   </ItemGroup>
 
